--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vue-scrollto": "^2.15.0"
   },
   "browserslist": [
     "> 1%",
