--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.23",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
-    "vue-scrollto": "^2.15.0"
+    "vue-scrollto": "^2.15.0",
+    "vuetify": "^1.5.14"
   },
   "browserslist": [
     "> 1%",
