--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.0.0-rc.23",
     "vee-validate": "^2.2.10",
     "vue": "^2.5.11",
+    "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "vue-scrollto": "^2.15.0",
