--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
     "bootstrap-vue": "^2.0.0-rc.23",
+    "leaflet": "^1.5.1",
+    "simple-vue-validator": "^0.16.0",
     "vee-validate": "^2.2.10",
     "vue": "^2.5.11",
     "vue-bootstrap-datetimepicker": "^5.0.1",
+    "vue-form-wizard": "^0.8.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "vue-scrollto": "^2.15.0",
+    "vue2-leaflet": "^2.1.1",
     "vuejs-datepicker": "^1.5.4",
+    "vuelidate": "^0.7.4",
     "vuetify": "^1.5.14"
   },
   "browserslist": [
