--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
-    "bootstrap-vue": "^2.0.0-rc.23",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.24",
     "leaflet": "^1.5.1",
     "simple-vue-validator": "^0.16.0",
     "vee-validate": "^2.2.10",
-    "vue": "^2.5.11",
+    "vue": "^2.6.10",
     "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-form-wizard": "^0.8.4",
     "vue-resource": "^1.5.1",
