--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "vue-scrollto": "^2.15.0",
+    "vue2-google-maps": "^0.10.6",
     "vue2-leaflet": "^2.1.1",
     "vuejs-datepicker": "^1.5.4",
     "vuelidate": "^0.7.4",
