--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vee-validate": "^2.2.10",
     "vue": "^2.6.10",
     "vue-bootstrap-datetimepicker": "^5.0.1",
+    "vue-browser-geolocation": "^1.8.0",
     "vue-form-wizard": "^0.8.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
