--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-browser-geolocation": "^1.8.0",
     "vue-form-wizard": "^0.8.4",
+    "vue-loading-overlay": "^3.2.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "vue-scrollto": "^2.15.0",
     "vue2-google-maps": "^0.10.6",
     "vue2-leaflet": "^2.1.1",
     "vuejs-datepicker": "^1.5.4",
+    "vuejs-loading-plugin": "^1.0.5",
     "vuelidate": "^0.7.4",
     "vuetify": "^1.5.14"
   },
