--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vue-browser-geolocation": "^1.8.0",
     "vue-form-wizard": "^0.8.4",
     "vue-loading-overlay": "^3.2.0",
+    "vue-recaptcha": "^1.2.0",
+    "vue-recaptcha-v3": "^1.5.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "vue-scrollto": "^2.15.0",
