--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "file-loader": "^1.1.4",
     "html-webpack-plugin": "^3.2.0",
     "prerender-spa-plugin": "^3.4.0",
+    "robotstxt-webpack-plugin": "^7.0.0",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
